# AgentAssistant

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  main.py  models.py
app/services/: __init__.py  ai.py  importer.py  replies.py  research.py  sequences.py
app/static/: styles.css
app/templates/: base.html  contact_detail.html  contacts.html  dashboard.html  discovery.html  imports.html  login.html  playbook.html  settings.html
app/templates/partials/: discovery_results.html  reply_panel.html  sequence_panel.html
docs/: demo-runbook.md
scripts/: start-demo.ps1
tests/: conftest.py  test_importer.py  test_workflows.py
tests/fixtures/: cognism_sample.csv  salesforce_sample.csv
