[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisdr"
version = "0.1.0"
description = "Agentic SDR MVP for services teams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "jinja2>=3.1,<4.0",
  "sqlmodel>=0.0.22,<1.0",
  "python-multipart>=0.0.12,<1.0",
  "itsdangerous>=2.2,<3.0",
  "httpx>=0.28,<1.0",
  "openai>=1.54,<2.0",
  "psycopg[binary]>=3.2,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["app*"]
